# pbg-autopoiesis

./: .gitignore  README.md  index.html  pyproject.toml  workspace.yaml
.github/workflows/: publish-dashboard.yml  publish-reports.yml
.pbg/server/: server-info
dashboard/: config.json  index.html
dashboard/api/: catalog.json  composites.json  investigations.json  iset-list.json  registry.json  simulations.json  visualization-classes.json  workspace.json
dashboard/api/composite-state/: pbg_autopoiesis.composites.adaptive-chemotaxis.json  pbg_autopoiesis.composites.growth-division.json  pbg_autopoiesis.composites.membrane-metabolism-loop.json  pbg_autopoiesis.composites.spatial-containment.json
docs/: investigation.md  roadmap.md
figures/: index.html
investigations/: autopoiesis-through-composition.html
investigations/autopoiesis-through-composition/: investigation.yaml
pbg_autopoiesis/: chemotaxis.py  core.py  growth.py  loop.py  meter.py  processes.py  processes_chemotaxis.py  processes_growth.py  processes_spatial.py  spatial.py  spine.py  viz.py
pbg_autopoiesis/composites/: adaptive-chemotaxis.composite.yaml  growth-division.composite.yaml  membrane-metabolism-loop.composite.yaml  spatial-containment.composite.yaml
reports/: index.html
studies/study-1-membrane-metabolism-loop/: study.yaml
studies/study-2-spatial-containment/: study.yaml
studies/study-3-adaptive-chemotaxis/: study.yaml
studies/study-4-growth-division/: study.yaml
studies/study-5-adversarial-probes/: study.yaml
tests/: test_composites.py  test_loop.py  test_wave2.py
(+18 files in other folders)
